--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,33 @@
+accelerate==0.28.0
+aiohappyeyeballs==2.4.8
+aiohttp==3.11.13
+aiosignal==1.3.2
+async-timeout==5.0.1
+attrs==25.1.0
+beartype==0.17.2
+bitsandbytes==0.43.0
+blinker @ file:///croot/blinker_1737448726027/work
 boto3==1.36.26
 botocore==1.36.26
+Brotli @ file:///croot/brotli-split_1736182456865/work
+cachetools==5.5.2
+certifi @ file:///croot/certifi_1738623731865/work/certifi
+charset-normalizer @ file:///croot/charset-normalizer_1721748349566/work
+click @ file:///croot/click_1698129812380/work
+CoLT5-attention==0.10.20
+datasets==2.19.2
+diffusers==0.32.2
+dill==0.3.8
+einops==0.7.0
+einops-exts==0.0.4
+einx==0.3.0
+exceptiongroup==1.2.2
+filelock==3.17.0
+flake8==7.1.2
 Flask @ file:///croot/flask_1737454299809/work
+frozendict==2.4.6
+frozenlist==1.5.0
+fsspec==2024.3.1
 google-api-core==2.24.1
 google-auth==2.38.0
 google-cloud-core==2.4.2
@@ -9,20 +36,83 @@ google-crc32c==1.6.0
 google-resumable-media==2.7.2
 googleapis-common-protos==1.68.0
 huggingface-hub==0.29.1
-numpy==2.0.2
+idna @ file:///croot/idna_1714398848350/work
+importlib_metadata @ file:///croot/importlib_metadata-suite_1732633488278/work
+iniconfig==2.0.0
+itsdangerous @ file:///croot/itsdangerous_1716533337253/work
+Jinja2 @ file:///croot/jinja2_1737760107953/work
+jmespath==1.0.1
+libcst==1.5.1
+local-attention==1.9.3
+loguru==0.7.3
+markdown-it-py==3.0.0
+MarkupSafe @ file:///croot/markupsafe_1738584038848/work
+mccabe==0.7.0
+mdurl==0.1.2
+mpmath==1.3.0
+multidict==6.1.0
+multiprocess==0.70.16
+networkx==3.2.1
+numpy==1.25.2
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-cusparselt-cu12==0.6.2
+nvidia-nccl-cu12==2.19.3
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.1.105
 packaging==24.2
+pandas==2.2.3
 pillow==11.1.0
+pluggy==1.5.0
+propcache==0.3.0
+proto-plus==1.26.0
+protobuf==5.29.3
+psutil==7.0.0
+pyarrow==19.0.1
+pyarrow-hotfix==0.6
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycodestyle==2.12.1
+pyflakes==3.2.0
+Pygments==2.19.1
+PySocks @ file:///tmp/build/80754af9/pysocks_1605305812635/work
+pytest==8.1.1
+python-dateutil==2.9.0.post0
+pytz==2025.1
+PyYAML==6.0.2
+qwen==0.1.1
+regex==2024.11.6
 requests @ file:///croot/requests_1730999120400/work
+rich==13.7.1
+rsa==4.9
 s3transfer==0.11.2
 safetensors==0.5.3
+scipy==1.9.3
 six==1.17.0
 sympy==1.13.1
-tokenizers==0.21.0
-torch==2.6.0
-tqdm==4.67.1
-transformers==4.49.0
-triton==3.2.0
+tokenizers==0.15.2
+tomli==2.2.1
+torch==2.2.0
+TorchFix==0.7.0
+torchvision==0.17.0
+tqdm==4.66.2
+transformers==4.39.1
+triton==2.2.0
 typing_extensions==4.12.2
+tzdata==2025.1
 urllib3==1.26.20
+vector_quantize_pytorch==1.14.5
+Werkzeug @ file:///croot/werkzeug_1737448706492/work
+xxhash==3.5.0
+yarl==1.18.3
+zetascale==2.4.5
 zipnn==0.5.2
 zipp @ file:///croot/zipp_1732630741423/work
+zstandard==0.23.0
